// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<label
  class="wp-components-truncate wp-components-text wp-components-control-label css-1ppuusk"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  Label
</label>
`;

exports[`props should render htmlFor 1`] = `
<label
  class="wp-components-truncate wp-components-text wp-components-control-label css-1ppuusk"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
  for="Field"
>
  Label
</label>
`;

exports[`props should render no truncate 1`] = `
<label
  class="wp-components-truncate wp-components-text wp-components-control-label css-1538vg2"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  Label
</label>
`;

exports[`props should render size 1`] = `
<label
  class="wp-components-truncate wp-components-text wp-components-control-label css-176x1s9"
  data-g2-c16t="true"
  data-g2-component="ControlLabel"
>
  Label
</label>
`;
